[gd_scene load_steps=14 format=3 uid="uid://dvuobn4gylh5g"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_85a7w"]
[ext_resource type="FontFile" uid="uid://dtho83o6quqlw" path="res://resources/fonts/Fifaks10Dev1.ttf" id="2_62t8n"]
[ext_resource type="Texture2D" uid="uid://b3n4wmo070y81" path="res://resources/png/ui/MainMenu.png" id="2_ngsxd"]
[ext_resource type="Texture2D" uid="uid://clfoavuntnaji" path="res://player/sprite/player.png" id="3_y253b"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="4_8l6r4"]
[ext_resource type="Texture2D" uid="uid://bwx7ullvdlxfn" path="res://resources/png/ui/Settings.png" id="4_45gl5"]
[ext_resource type="Texture2D" uid="uid://btokssst8o6bj" path="res://resources/png/ui/checkbox_on.png" id="5_nd7ak"]
[ext_resource type="Texture2D" uid="uid://c1xevsxmjhl0f" path="res://resources/png/ui/checkbox_off.png" id="6_2teiy"]
[ext_resource type="Texture2D" uid="uid://dndnb66kt20fh" path="res://npc/Unknown/unknown_sprite.png" id="7_f8aof"]
[ext_resource type="Texture2D" uid="uid://dmntqpuxacy6y" path="res://resources/png/ui/grabber.png" id="7_uwxoj"]
[ext_resource type="Texture2D" uid="uid://bx7k3xn2hk3rg" path="res://resources/png/ui/slider.png" id="8_mpxjn"]
[ext_resource type="AudioStream" uid="uid://dtrimky22vner" path="res://resources/audio/music/Patreon Goal Reward Loops - Track 03.wav" id="10_utudc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uwhme"]
texture = ExtResource("8_mpxjn")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="MainMenu" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(0, 80)
transform = Transform2D(1, 0, 0, 1, 0, 80)
script = ExtResource("1_85a7w")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainBackground" type="TextureRect" parent="CanvasLayer/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("2_ngsxd")
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/Main"]
layout_mode = 0
offset_left = 11.0
offset_top = 545.0
offset_right = 131.0
offset_bottom = 568.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
text = "by kiowe © 2023"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Main"]
texture_filter = 1
position = Vector2(811, 149)
scale = Vector2(3, 3)
texture = ExtResource("3_y253b")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_colors/font_hover_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_focus_color = Color(1, 0.192157, 0.14902, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.192157, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Играть"
flat = true

[node name="ButtonSettings" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_colors/font_hover_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_focus_color = Color(1, 0.192157, 0.14902, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.192157, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Настройки"
flat = true

[node name="ButtonInfo" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_colors/font_hover_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_focus_color = Color(1, 0.192157, 0.14902, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.192157, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Информация"
flat = true

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_colors/font_hover_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_focus_color = Color(1, 0.192157, 0.14902, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.192157, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Выйти"
flat = true

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_8l6r4")

[node name="SettingsBackground" type="TextureRect" parent="CanvasLayer/Settings"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("4_45gl5")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Settings"]
texture_filter = 1
position = Vector2(49, 593)
scale = Vector2(3, 3)
texture = ExtResource("7_f8aof")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="LabelSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 48
text = "Настройки
 "
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="FullScreen" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="FullScreenSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/FullScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "На весь экран"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenButton" type="CheckButton" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/FullScreen"]
texture_filter = 1
layout_mode = 2
theme_override_icons/checked = ExtResource("5_nd7ak")
theme_override_icons/unchecked = ExtResource("6_2teiy")

[node name="MasterVolume" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Мастер "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolSlider" type="HSlider" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_uwxoj")
theme_override_icons/grabber_highlight = ExtResource("7_uwxoj")
theme_override_icons/tick = ExtResource("8_mpxjn")
theme_override_styles/slider = SubResource("StyleBoxTexture_uwhme")
min_value = -80.0
max_value = 1.0
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Музыка "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolSlider" type="HSlider" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_uwxoj")
theme_override_icons/grabber_highlight = ExtResource("7_uwxoj")
theme_override_icons/tick = ExtResource("8_mpxjn")
theme_override_styles/slider = SubResource("StyleBoxTexture_uwhme")
min_value = -80.0
max_value = 1.0
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Эффекты"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolSlider" type="HSlider" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_uwxoj")
theme_override_icons/grabber_highlight = ExtResource("7_uwxoj")
theme_override_icons/tick = ExtResource("8_mpxjn")
theme_override_styles/slider = SubResource("StyleBoxTexture_uwhme")
min_value = -80.0
max_value = 1.0
value = 1.0

[node name="ButtonBack" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.34902, 0.34902, 0.34902, 1)
theme_override_colors/font_hover_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_focus_color = Color(1, 0.192157, 0.14902, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.192157, 0.14902, 1)
theme_override_fonts/font = ExtResource("2_62t8n")
theme_override_font_sizes/font_size = 30
text = "Назад"
flat = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_utudc")
autoplay = true
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 330)

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="CanvasLayer" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSettings" to="CanvasLayer" method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonInfo" to="CanvasLayer" method="_on_button_info_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="toggled" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/FullScreen/FullScreenButton" to="CanvasLayer/Settings" method="_on_full_screen_button_toggled"]
[connection signal="value_changed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MasterVolume/MasterVolSlider" to="CanvasLayer/Settings" method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolume/MusicVolSlider" to="CanvasLayer/Settings" method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolume/SFXVolSlider" to="CanvasLayer/Settings" method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonBack" to="CanvasLayer" method="_on_button_back_pressed"]
